# aibotbeta

./: README.md  app.py  index.html  manifest.json  project.toml  pyproject.toml  requirements.txt
templates/: admin.html  index.html  login.html  view.html
