[tool.poetry]
name = "aibotbeta"
version = "0.1.0"
description = "AI-powered stock trading bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
flask = "^3.1.1"
requests = "^2.32.3"
google-generativeai = "^0.7.2"
Flask-Cors = "^4.0.2"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
